Fixed announcment alignment

--- a/src/sass/theme/front-page.scss
+++ b/src/sass/theme/front-page.scss
@@ -179,11 +179,11 @@
     background-position: center;
     display: flex;
     align-items: center;
-    text-align: right;
+    text-align: left;
     box-shadow: inset 0 0 0 1000px rgba($black, 0.3);
 
-    &:nth-of-type(even) {
-      text-align: left;
+    &.right {
+      text-align: right;
     }
 
     h2 {
